# cft_test_task

./: CMakeLists.txt  README.md
include/: common.h
src/: common.c  process.c  test.c
